[gd_scene load_steps=48 format=3 uid="uid://cl832rhbalsgq"]

[ext_resource type="Script" path="res://scripts/gameplay_scripts/simple_fraction_addition.gd" id="1_q1p7f"]
[ext_resource type="PackedScene" uid="uid://0q0ebxluougn" path="res://scenes/ui/energy_bar.tscn" id="2_bpkib"]
[ext_resource type="Texture2D" uid="uid://kex21phpt41e" path="res://scenes/gameplay_scenes/worded_fraction_gameplay/assets/button_box.png" id="3_5onmm"]
[ext_resource type="PackedScene" uid="uid://dkqfovnosijms" path="res://scenes/gameplay_scenes/fraction_problem.tscn" id="4_xunm2"]
[ext_resource type="Texture2D" uid="uid://bjdn5kjtbxs5l" path="res://assets/floor_1/npc/reactions/Old Peculiar Correct.png" id="5_d8xkg"]
[ext_resource type="Texture2D" uid="uid://cnupb6135utyu" path="res://assets/floor_1/npc/mc idle front.png" id="6_yk0kl"]
[ext_resource type="Texture2D" uid="uid://3d18d0olryjn" path="res://assets/floor_1/npc/reactions/Old Peculiar Wrong Answer.png" id="7_4u225"]
[ext_resource type="Texture2D" uid="uid://35ry4fuvvgrx" path="res://assets/floor_1/npc/reactions/Saisai_correct.png" id="8_gyxkf"]
[ext_resource type="Texture2D" uid="uid://duvm581upfn71" path="res://assets/floor_1/npc/Saisai Idle Long (2).png" id="9_s5m7l"]
[ext_resource type="Texture2D" uid="uid://dxwfqyv350leo" path="res://assets/floor_1/npc/reactions/Saisai Disappointed.png" id="10_ko7mx"]
[ext_resource type="PackedScene" uid="uid://rt1ablaat1qg" path="res://scenes/ui/help_button.tscn" id="11_dhte6"]
[ext_resource type="PackedScene" uid="uid://bbry446v48htq" path="res://scenes/ui/quick_tutorial.tscn" id="12_gxf0q"]
[ext_resource type="PackedScene" uid="uid://qi0gyl783jj2" path="res://scenes/ui/congratulations.tscn" id="13_chkrc"]
[ext_resource type="PackedScene" uid="uid://c442aeoodnesa" path="res://scenes/levels/Floor1.tscn" id="14_etncn"]
[ext_resource type="AudioStream" uid="uid://c5usoabj7ebry" path="res://audio/sound_effects/Correct Answer.wav" id="15_yrpjn"]
[ext_resource type="AudioStream" uid="uid://d4gfci1awar1a" path="res://audio/sound_effects/Wrong Answer.wav" id="16_diqmv"]
[ext_resource type="AudioStream" uid="uid://bkt4jb8as3uie" path="res://audio/background_music/simple_gameplay/Flute Adventure.ogg" id="17_yrfqx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k1ihx"]
atlas = ExtResource("5_d8xkg")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ys1dq"]
atlas = ExtResource("5_d8xkg")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uic2v"]
atlas = ExtResource("5_d8xkg")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2u86b"]
atlas = ExtResource("5_d8xkg")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qism5"]
atlas = ExtResource("5_d8xkg")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_56fwi"]
atlas = ExtResource("5_d8xkg")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5q7s"]
atlas = ExtResource("5_d8xkg")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kj7b"]
atlas = ExtResource("6_yk0kl")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qstq8"]
atlas = ExtResource("6_yk0kl")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uvxf"]
atlas = ExtResource("6_yk0kl")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ig4qs"]
atlas = ExtResource("6_yk0kl")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0eggx"]
atlas = ExtResource("7_4u225")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gd3h"]
atlas = ExtResource("7_4u225")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ww42q"]
atlas = ExtResource("7_4u225")
region = Rect2(0, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ew3ia"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1ihx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys1dq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uic2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2u86b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qism5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56fwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5q7s")
}],
"loop": false,
"name": &"correct",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kj7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qstq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uvxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ig4qs")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0eggx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gd3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ww42q")
}],
"loop": false,
"name": &"wrong",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ln7rm"]
atlas = ExtResource("8_gyxkf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mc4h6"]
atlas = ExtResource("8_gyxkf")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oghjx"]
atlas = ExtResource("8_gyxkf")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3uiu"]
atlas = ExtResource("8_gyxkf")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7htd"]
atlas = ExtResource("8_gyxkf")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6ylx"]
atlas = ExtResource("9_s5m7l")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdvek"]
atlas = ExtResource("9_s5m7l")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w15fh"]
atlas = ExtResource("9_s5m7l")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcccv"]
atlas = ExtResource("9_s5m7l")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpb53"]
atlas = ExtResource("9_s5m7l")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nk18l"]
atlas = ExtResource("10_ko7mx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0e30h"]
atlas = ExtResource("10_ko7mx")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mvvb"]
atlas = ExtResource("10_ko7mx")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1fqf"]
atlas = ExtResource("10_ko7mx")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_xl1ss"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln7rm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mc4h6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oghjx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3uiu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7htd")
}],
"loop": false,
"name": &"correct",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6ylx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdvek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w15fh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcccv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpb53")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nk18l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0e30h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mvvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1fqf")
}],
"loop": false,
"name": &"wrong",
"speed": 8.0
}]

[node name="SimpleFractionAddition" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -9.0
offset_right = -9.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q1p7f")

[node name="bg" type="ColorRect" parent="."]
self_modulate = Color(0.729412, 0.729412, 0.729412, 1)
layout_mode = 0
offset_left = -35.0
offset_top = -20.0
offset_right = 1049.0
offset_bottom = 598.0
color = Color(0.207843, 0.168627, 0.25098, 1)

[node name="EnergyBar" parent="." instance=ExtResource("2_bpkib")]
layout_mode = 1
offset_left = -286.0
offset_top = -229.0
offset_right = -286.0
offset_bottom = -229.0
scale = Vector2(5, 5)

[node name="board" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 97.0
offset_right = 166.0
offset_bottom = 156.0
scale = Vector2(7.5, 7.5)

[node name="NinePatchRect" type="NinePatchRect" parent="board"]
layout_mode = 2
texture = ExtResource("3_5onmm")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="FractionProblem" parent="." instance=ExtResource("4_xunm2")]
layout_mode = 0
offset_left = 114.0
offset_top = 168.0
offset_right = 403.0
offset_bottom = 389.0
scale = Vector2(1.5, 1.5)

[node name="Robot" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(747, 330)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_ew3ia")
animation = &"correct"
autoplay = "idle"

[node name="Saisai" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(747, 330)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_xl1ss")
animation = &"idle"
autoplay = "idle"

[node name="Tutorials" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HelpButton" parent="Tutorials" instance=ExtResource("11_dhte6")]
layout_mode = 0
offset_left = 102.0
offset_top = 172.0
offset_right = 176.0
offset_bottom = 196.0

[node name="QuickTutorial" parent="Tutorials" node_paths=PackedStringArray("next") instance=ExtResource("12_gxf0q")]
visible = false
next = NodePath("../QuickTutorial2")

[node name="right" parent="Tutorials/QuickTutorial/filter" index="0"]
offset_left = -2.0

[node name="left" parent="Tutorials/QuickTutorial/filter" index="1"]
visible = false
offset_right = 67.0

[node name="bottom" parent="Tutorials/QuickTutorial/filter" index="2"]
visible = false
offset_left = 107.0
offset_right = 275.0

[node name="top" parent="Tutorials/QuickTutorial/filter" index="3"]
visible = false
offset_left = 107.0
offset_right = 275.0

[node name="Content" parent="Tutorials/QuickTutorial" index="1"]
offset_left = 49.0
offset_top = 103.0
offset_right = 962.0
offset_bottom = 384.0

[node name="Label" parent="Tutorials/QuickTutorial/Content" index="1"]
text = "To add fractions with the same denominators, simply add the numerators and copy the denominator."

[node name="CloseButton" parent="Tutorials/QuickTutorial/Close" index="0"]
text = "NEXT"

[node name="QuickTutorial2" parent="Tutorials" node_paths=PackedStringArray("next") instance=ExtResource("12_gxf0q")]
visible = false
next = NodePath("../QuickTutorial3")

[node name="right" parent="Tutorials/QuickTutorial2/filter" index="0"]
offset_left = 0.0

[node name="left" parent="Tutorials/QuickTutorial2/filter" index="1"]
visible = false

[node name="bottom" parent="Tutorials/QuickTutorial2/filter" index="2"]
visible = false

[node name="top" parent="Tutorials/QuickTutorial2/filter" index="3"]
visible = false

[node name="Content" parent="Tutorials/QuickTutorial2" index="1"]
offset_left = 54.0
offset_bottom = 403.0

[node name="Label" parent="Tutorials/QuickTutorial2/Content" index="1"]
text = "Then, type the correct numerator and denominator in the spaces provided."

[node name="CloseButton" parent="Tutorials/QuickTutorial2/Close" index="0"]
text = "NEXT"

[node name="QuickTutorial3" parent="Tutorials" node_paths=PackedStringArray("next") instance=ExtResource("12_gxf0q")]
visible = false
next = NodePath("../QuickTutorial4")

[node name="right" parent="Tutorials/QuickTutorial3/filter" index="0"]
offset_left = 311.0

[node name="left" parent="Tutorials/QuickTutorial3/filter" index="1"]
offset_right = 59.0

[node name="bottom" parent="Tutorials/QuickTutorial3/filter" index="2"]
offset_left = 99.0
offset_top = 401.0
offset_right = 271.0

[node name="top" parent="Tutorials/QuickTutorial3/filter" index="3"]
offset_left = 99.0
offset_right = 271.0
offset_bottom = 248.0

[node name="Label" parent="Tutorials/QuickTutorial3/Content" index="1"]
text = "To add fractions with the different denominators, first find the Least Common Denominator (LCD)."

[node name="CloseButton" parent="Tutorials/QuickTutorial3/Close" index="0"]
text = "NEXT"

[node name="QuickTutorial4" parent="Tutorials" node_paths=PackedStringArray("next") instance=ExtResource("12_gxf0q")]
visible = false
next = NodePath("../QuickTutorial5")

[node name="right" parent="Tutorials/QuickTutorial4/filter" index="0"]
offset_left = 314.0
offset_right = 986.0

[node name="left" parent="Tutorials/QuickTutorial4/filter" index="1"]
offset_right = 64.0

[node name="bottom" parent="Tutorials/QuickTutorial4/filter" index="2"]
offset_left = 102.0
offset_top = 404.0
offset_right = 274.0

[node name="top" parent="Tutorials/QuickTutorial4/filter" index="3"]
offset_left = 104.0
offset_right = 274.0
offset_bottom = 253.0

[node name="Label" parent="Tutorials/QuickTutorial4/Content" index="1"]
text = ""

[node name="CloseButton" parent="Tutorials/QuickTutorial4/Close" index="0"]
text = "NEXT"

[node name="QuickTutorial5" parent="Tutorials" node_paths=PackedStringArray("next") instance=ExtResource("12_gxf0q")]
visible = false
next = NodePath("../QuickTutorial6")

[node name="right" parent="Tutorials/QuickTutorial5/filter" index="0"]
offset_left = 201.0

[node name="left" parent="Tutorials/QuickTutorial5/filter" index="1"]
offset_right = 51.0

[node name="bottom" parent="Tutorials/QuickTutorial5/filter" index="2"]
offset_left = 91.0
offset_top = 401.0
offset_right = 161.0

[node name="top" parent="Tutorials/QuickTutorial5/filter" index="3"]
offset_left = 91.0
offset_right = 161.0

[node name="Label" parent="Tutorials/QuickTutorial5/Content" index="1"]
text = ""

[node name="CloseButton" parent="Tutorials/QuickTutorial5/Close" index="0"]
text = "NEXT"

[node name="QuickTutorial6" parent="Tutorials" node_paths=PackedStringArray("next") instance=ExtResource("12_gxf0q")]
visible = false
next = NodePath("../QuickTutorial7")

[node name="right" parent="Tutorials/QuickTutorial6/filter" index="0"]
offset_left = 198.0

[node name="left" parent="Tutorials/QuickTutorial6/filter" index="1"]
offset_right = 51.0

[node name="bottom" parent="Tutorials/QuickTutorial6/filter" index="2"]
offset_left = 91.0
offset_right = 158.0

[node name="top" parent="Tutorials/QuickTutorial6/filter" index="3"]
offset_left = 91.0
offset_right = 159.0

[node name="Label" parent="Tutorials/QuickTutorial6/Content" index="1"]
text = ""

[node name="CloseButton" parent="Tutorials/QuickTutorial6/Close" index="0"]
text = "NEXT"

[node name="QuickTutorial7" parent="Tutorials" node_paths=PackedStringArray("next") instance=ExtResource("12_gxf0q")]
visible = false
next = NodePath("../QuickTutorial8")

[node name="right" parent="Tutorials/QuickTutorial7/filter" index="0"]
offset_left = 301.0

[node name="left" parent="Tutorials/QuickTutorial7/filter" index="1"]
offset_right = 202.0

[node name="bottom" parent="Tutorials/QuickTutorial7/filter" index="2"]
offset_left = 242.0
offset_right = 261.0

[node name="top" parent="Tutorials/QuickTutorial7/filter" index="3"]
offset_left = 242.0
offset_right = 261.0
offset_bottom = 250.0

[node name="Label" parent="Tutorials/QuickTutorial7/Content" index="1"]
text = ""

[node name="CloseButton" parent="Tutorials/QuickTutorial7/Close" index="0"]
text = "NEXT"

[node name="QuickTutorial8" parent="Tutorials" node_paths=PackedStringArray("next") instance=ExtResource("12_gxf0q")]
visible = false
next = NodePath("../QuickTutorial9")

[node name="right" parent="Tutorials/QuickTutorial8/filter" index="0"]
offset_left = 301.0

[node name="left" parent="Tutorials/QuickTutorial8/filter" index="1"]
offset_right = 202.0

[node name="bottom" parent="Tutorials/QuickTutorial8/filter" index="2"]
offset_left = 242.0
offset_right = 261.0

[node name="top" parent="Tutorials/QuickTutorial8/filter" index="3"]
offset_left = 242.0
offset_right = 261.0
offset_bottom = 252.0

[node name="Label" parent="Tutorials/QuickTutorial8/Content" index="1"]
text = ""

[node name="CloseButton" parent="Tutorials/QuickTutorial8/Close" index="0"]
text = "NEXT"

[node name="QuickTutorial9" parent="Tutorials" instance=ExtResource("12_gxf0q")]
visible = false

[node name="right" parent="Tutorials/QuickTutorial9/filter" index="0"]
offset_left = 569.0

[node name="left" parent="Tutorials/QuickTutorial9/filter" index="1"]
offset_right = 320.0

[node name="bottom" parent="Tutorials/QuickTutorial9/filter" index="2"]
offset_left = 360.0
offset_top = 406.0
offset_right = 529.0

[node name="top" parent="Tutorials/QuickTutorial9/filter" index="3"]
offset_left = 360.0
offset_right = 529.0
offset_bottom = 237.0

[node name="Label" parent="Tutorials/QuickTutorial9/Content" index="1"]
text = ""

[node name="Congrats" parent="." instance=ExtResource("13_chkrc")]
visible = false
next_scene = ExtResource("14_etncn")

[node name="CorrectAnswerSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_yrpjn")
volume_db = -33.73

[node name="WrongAnswerSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_diqmv")
volume_db = -27.171

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_yrfqx")
volume_db = -15.928
autoplay = true

[connection signal="all_done" from="FractionProblem" to="." method="_on_fraction_problem_all_done"]
[connection signal="correct" from="FractionProblem" to="." method="_on_fraction_problem_correct"]
[connection signal="incorrect" from="FractionProblem" to="." method="_on_fraction_problem_incorrect"]

[editable path="FractionProblem"]
[editable path="Tutorials/QuickTutorial"]
[editable path="Tutorials/QuickTutorial2"]
[editable path="Tutorials/QuickTutorial3"]
[editable path="Tutorials/QuickTutorial4"]
[editable path="Tutorials/QuickTutorial5"]
[editable path="Tutorials/QuickTutorial6"]
[editable path="Tutorials/QuickTutorial7"]
[editable path="Tutorials/QuickTutorial8"]
[editable path="Tutorials/QuickTutorial9"]
